--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^2.3.11",
     "body-parser": "^1.10.0",
     "commander": "^2.5.1",
+    "connect-pg-simple": "^3.1.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.1.0",
     "cors": "^2.7.1",
