--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
     "lib": "./lib/"
   },
   "dependencies": {
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.18.2",
-    "commander": "^2.12.2",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "commander": "^2.20.3",
     "connect-pg-simple": "^3.1.2",
-    "cookie-parser": "^1.3.3",
-    "cookie-session": "^1.3.2",
-    "cors": "^2.8.4",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "ecstatic": "3.1.1",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.15.6",
+    "express-session": "^1.17.1",
     "express-validator": "^3.2.1",
-    "gravatar": "^1.6.0",
-    "js-yaml": "^3.10.0",
+    "gravatar": "^1.8.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^2.4.2",
     "markdown-toc": "^0.11.9",
-    "marked": "^0.3.9",
+    "marked": "^0.3.19",
     "method-override": "^2.3.10",
-    "morgan": "^1.9.0",
+    "morgan": "^1.10.0",
     "node-syntaxhighlighter": "*",
     "passport": "^0.2.0",
     "passport-github": "^0.1.5",
@@ -61,15 +61,15 @@
     "passport-local": "^1.0.0",
     "passport-openstreetmap": "^0.1.2",
     "pg": "^6.4.2",
-    "pug": "^2.0.0-rc.4",
-    "semver": "^5.3.0",
-    "serve-favicon": "^2.4.5",
+    "pug": "^2.0.4",
+    "semver": "^5.7.1",
+    "serve-favicon": "^2.5.0",
     "transliteration": "^0.2.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "mocha": "^4.1.0",
-    "nodemon": "^1.10.2",
+    "nodemon": "^1.19.4",
     "sinon": "^1.17.7"
   },
   "scripts": {
