--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.2",
-    "commander": "^2.12.2",
-    "connect-pg-simple": "^3.1.2",
+    "commander": "^5.1.0",
+    "connect-pg-simple": "^6.1.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.3.2",
     "cors": "^2.8.4",
-    "ecstatic": "3.1.1",
+    "ecstatic": "^4.1.4",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
