--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
     "lib": "./lib/"
   },
   "dependencies": {
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.18.2",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "commander": "^5.1.0",
     "connect-pg-simple": "^6.1.0",
-    "cookie-parser": "^1.3.3",
-    "cookie-session": "^1.3.2",
-    "cors": "^2.8.4",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "ecstatic": "^4.1.4",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.15.6",
-    "express-validator": "^6.4.0",
-    "gravatar": "^1.6.0",
-    "js-yaml": "^3.10.0",
+    "express-session": "^1.17.1",
+    "express-validator": "^5.3.1",
+    "gravatar": "^1.8.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "markdown-toc": "^1.2.0",
     "marked": "^1.0.0",
     "method-override": "^3.0.0",
-    "morgan": "^1.9.0",
+    "morgan": "^1.10.0",
     "node-syntaxhighlighter": "*",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
@@ -61,15 +61,15 @@
     "passport-local": "^1.0.0",
     "passport-openstreetmap": "^0.1.2",
     "pg": "^8.0.3",
-    "pug": "^2.0.0-beta11",
+    "pug": "^2.0.4",
     "semver": "^7.3.2",
-    "serve-favicon": "^2.4.5",
+    "serve-favicon": "^2.5.0",
     "transliteration": "^2.1.8"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.3",
+    "nodemon": "^2.0.4",
     "sinon": "^9.0.2"
   },
   "scripts": {
